--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -55,7 +55,7 @@ hr.star-light {
 
 hr.star-light:after {
   color: white;
-  background-color: #C8102E  ; }
+  background-color: #add8e6  ; }
 
 hr.star-primary {
   border-color: #2C3E50; }
@@ -75,7 +75,7 @@ section {
 
 section.success {
   color: white;
-  background: #C8102E; }
+  background: #add8e6; }
 
 @media (max-width: 767px) {
   section {
@@ -163,7 +163,7 @@ header.masthead {
   padding-bottom: 50px;
   text-align: center;
   color: white;
-  background: #C8102E; }
+  background: #add8e6; }
   header.masthead img {
     display: block;
     margin: 0 auto 20px; }
